Fix overlapping content

--- a/styles.css
+++ b/styles.css
@@ -23,13 +23,12 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 25px;
-  padding-top: 50px;
+  padding: 25px;
+  gap: 15px;
   box-sizing: border-box;
 }
 
 #formWrapper {
-  max-height: 500px;
   min-width: 300px;
 }
 form {
@@ -97,6 +96,8 @@ button {
 }
 
 #resultWrapper {
+  min-width: 300px;
+  text-align: center;
   color: green;
   font-weight: bold;
   border-top: 3px solid green;
